modified the 4 restaurant pages

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   <link rel="stylesheet" href="./public/styles/main.css">
 </head>
 
-<body>
-  <div class="spinner-container" id="spinner-hidden">
+<body class="body">
+  <div class="spinner-container">
     <div class="spinner"></div>
   </div>
+  
   <header class="logo">
       <img class=logo__image src="./public/images/logo/ohmyfood.png" alt="Logo">
   </header>
@@ -39,8 +40,7 @@
   </section>
 
   <div class="how-it-works">
-    <div class="how-it-works__title">
-    <h2>How it works</h2>
+    <h2 class="how-it-works__title">How it works</h2>
   </div>
     <ol>
       <li>
@@ -62,7 +62,7 @@
   </div>
 
   <section class="restaurants">
-    <h2>Restaurants</h2>
+    <h2 class="restaurants__title">Restaurants</h2>
     <div class="cards">
       <a class="card" href="./public/pages/kitchen-west.html">
         <p class="new">New</p>
@@ -118,18 +118,18 @@
   <footer>
     <h2>ohmyfood</h2>
     <ul>
-      <li>
+      <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-utensils"></i>
         <p>Suggest a restaurant</p>
       </li>
-      <li>
+      <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
         <p>Become a partner</p>
       </li>
-      <li>
+      <li class="footer-list">
         <p>Legal notice</p>
       </li>
-      <li>
+      <li class="footer-list">
         <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
       </li>
     </ul>
