--- a/public/pages/elderflower.html
+++ b/public/pages/elderflower.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="https://kit.fontawesome.com/a0c38bd0e3.js" crossorigin="anonymous"></script>
-  <title>Kitchen West</title>
+  <title>Elderflower</title>
   <link rel="stylesheet" href="../styles/pages.css">
 </head>
 
@@ -35,134 +35,139 @@
           <i class="fa-solid fa-heart heart-heading__full"></i>
         </div>
       </div>
-      <section class="category">
-        <h2 class="category__title">Starters</h2>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Brisket ravioli</h3>
-            <p class="item__content">Served with truffle cream</p>
+      <div class="courses">
+        <section class="category">
+          <h2 class="category__title">Starters</h2>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Brisket ravioli</h3>
+              <p class="item__content">Served with truffle cream</p>
+            </div>
+            <span class="item__price">£25</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£25</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Beluga caviar</h3>
+              <p class="item__content">Served on buckwheat blinis</p>
+            </div>
+            <span class="item__price">£35</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Beluga caviar</h3>
-            <p class="item__content">Served on buckwheat blinis</p>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Lobster with pumpkin foam</h3>
+              <p class="item__content">And orange zest</p>
+            </div>
+            <span class="item__price">£20</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£35</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Duck terrine</h3>
+              <p class="item__content">Fig jam and toasted brioche</p>
+            </div>
+            <span class="item__price">£35</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Lobster with pumpkin foam</h3>
-            <p class="item__content">And orange zest</p>
+        </section>
+        <section class="category">
+          <h2 class="category__title">Mains</h2>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Scallops</h3>
+              <p class="item__content">On a bed of celeriac purée</p>
+            </div>
+            <span class="item__price">£40</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£20</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Pan-fried langoustine</h3>
+              <p class="item__content">With sweet potato mash</p>
+            </div>
+            <span class="item__price">£35</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Duck terrine</h3>
-            <p class="item__content">Fig jam and toasted brioche</p>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Braised oxtail</h3>
+              <p class="item__content">With lemon-zested wild rice</p>
+            </div>
+            <span class="item__price">£44</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£35</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+        </section>
+        <section class="category">
+          <h2 class="category__title">Desserts</h2>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Chocolate parfait</h3>
+              <p class="item__content">With salted caramel ice cream</p>
+            </div>
+            <span class="item__price">£18</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-      </section>
-      <section class="category">
-        <h2 class="category__title">Mains</h2>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Scallops</h3>
-            <p class="item__content">On a bed of celeriac purée</p>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Deconstructed rum baba</h3>
+              <p class="item__content">With lemon coulis/p>
+            </div>
+            <span class="item__price">£22</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-          <span class="item__price">£40</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
+          <div class="item">
+            <div class="item__text">
+              <h3 class="item__title">Lemon meringue pie</h3>
+              <p class="item__content">Deconstructed</p>
+            </div>
+            <span class="item__price">£23</span>
+            <div class="selection">
+              <i class="selection__mark fa-solid fa-check"></i>
+            </div>
           </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Pan-fried langoustine</h3>
-            <p class="item__content">With sweet potato mash</p>
-          </div>
-          <span class="item__price">£35</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Braised oxtail</h3>
-            <p class="item__content">With lemon-zested wild rice</p>
-          </div>
-          <span class="item__price">£44</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-      </section>
-      <section class="category">
-        <h2 class="category__title">Desserts</h2>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Chocolate parfait</h3>
-            <p class="item__content">With salted caramel ice cream</p>
-          </div>
-          <span class="item__price">£18</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Deconstructed rum baba</h3>
-            <p class="item__content">With lemon coulis</p>
-          </div>
-          <span class="item__price">£22</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <div class="item">
-          <div class="item__text">
-            <h3 class="item__title">Lemon meringue pie</h3>
-            <p class="item__content">Deconstructed</p>
-          </div>
-          <span class="item__price">£23</span>
-          <div class="selection">
-            <i class="selection__mark fa-solid fa-check"></i>
-          </div>
-        </div>
-        <a class="order-button" href="#">Order</a>
-      </section>
+        </section>
+        <section class="order">
+          <a class="order-button" href="#">Order</a>
+        </section>
+      </div>
     </section>
   </section>
+
   <footer>
     <h2>ohmyfood</h2>
     <ul>
-      <li>
+      <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-utensils"></i>
         <p>Suggest a restaurant</p>
       </li>
-      <li>
+      <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
         <p>Become a partner</p>
       </li>
-      <li>
+      <li class="footer-list">
         <p>Legal notice</p>
       </li>
-      <li>
-        <p>Contact</p>
+      <li class="footer-list">
+        <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
       </li>
     </ul>
   </footer>
