--- a/public/pages/kitchen-west.html
+++ b/public/pages/kitchen-west.html
@@ -141,22 +141,23 @@
       </div>
     </section>
   </section>
+
   <footer>
     <h2>ohmyfood</h2>
     <ul>
-      <li>
+      <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-utensils"></i>
         <p>Suggest a restaurant</p>
       </li>
-      <li>
+      <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
         <p>Become a partner</p>
       </li>
-      <li>
+      <li class="footer-list">
         <p>Legal notice</p>
       </li>
-      <li>
-        <a href="mailto: elisabethvillette3@gmail.com">Contact</a>
+      <li class="footer-list">
+        <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
       </li>
     </ul>
   </footer>
