--- a/public/pages/the-bay-leaf.html
+++ b/public/pages/the-bay-leaf.html
@@ -20,96 +20,148 @@
 
 <body>
   <header class="logo">
-    <nav>
+    <a href="../../">
       <i class="back fa-solid fa-arrow-left"></i>
-    </nav>
+    </a>
     <img class=logo__image src="../images/logo/ohmyfood.png" alt="Logo">
   </header>
   <img class=menu__image src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
     alt="The Bay Leaf">
-  <section class="menu-and-blank">
-    <section class="menu">
-      <div class="corazon">
-        <i class="fa-regular fa-heart corazon__empty"></i>
-        <i class="fa-solid fa-heart corazon__full"></i>
-      </div>
-      <h2 class="menu__title">The Bay Leaf</h2>
-      <section class="starters">
-        <h3 class="category__title">Starters</h3>
-        <div class="item">
-          <div class="item__title">Smoked Salmon</div>
-          <div class="item__content">With beetroot and horseradish</div>
-          <div class="item__price">£25</div>
+    <section class="menu-and-blank">
+      <section class="menu">
+        <div class="heading">
+          <h1 class="menu__title">The Bay Leaf</h1>
+          <div class="heart-heading">
+            <i class="fa-regular fa-heart heart-heading__empty"></i>
+            <i class="fa-solid fa-heart heart-heading__full"></i>
+          </div>
         </div>
-        <div class="item">
-          <div class="item__title">Ham hock terrine</div>
-          <div class="item__content">With piccalilli</div>
-          <div class="item__price">£35</div>
+        <div class="courses">
+          <section class="category">
+            <h2 class="category__title">Starters</h2>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Tuna tartare</h3>
+                <p class="item__content">With yuzu seasoning</p>
+              </div>
+              <span class="item__price">£25</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Crispy lobster bon-bon</h3>
+                <p class="item__content">With a vegetable selection</p>
+              </div>
+              <span class="item__price">£35</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Creamy porcini soup</h3>
+                <p class="item__content">With asparagus and hollandaise</p>
+              </div>
+              <span class="item__price">£20</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+          </section>
+          <section class="category">
+            <h2 class="category__title">Mains</h2>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Herb roast chicken</h3>
+                <p class="item__content">With truffle cream</p>
+              </div>
+              <span class="item__price">£40</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Roasted lobster</h3>
+                <p class="item__content">With seasonal vegetables</p>
+              </div>
+              <span class="item__price">£35</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Aberdeen Angus prime rib</h3>
+                <p class="item__content">With parsnip mash</p>
+              </div>
+              <span class="item__price">£44</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+          </section>
+          <section class="category">
+            <h2 class="category__title">Desserts</h2>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Assortment of desserts</h3>
+                <p class="item__content">With lime biscuit</p>
+              </div>
+              <span class="item__price">£18</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Crème brulée</h3>
+                <p class="item__content">With forest fruits</p>
+              </div>
+              <span class="item__price">£22</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item__text">
+                <h3 class="item__title">Tiramisu</h3>
+                <p class="item__content">With hazelnuts</p>
+              </div>
+              <span class="item__price">£23</span>
+              <div class="selection">
+                <i class="selection__mark fa-solid fa-check"></i>
+              </div>
+            </div>
+          </section>
+          <section class="order">
+            <a class="order-button" href="#">Order</a>
+          </section>
         </div>
-        <div class="item">
-          <div class="item__title">Poached egg</div>
-          <div class="item__content">With asparagus and hollandaise</div>
-          <div class="item__price">£20</div>
-        </div>
-      </section>
-      <section class="mains">
-        <h3 class="category__title">Mains</h3>
-        <div class="item">
-          <div class="item__title">Beef fillet with herb butter</div>
-          <div class="item__content">Served with a vegetable medley</div>
-          <div class="item__price">£40</div>
-        </div>
-        <div class="item">
-          <div class="item__title">Braised oxtail cottage pie</div>
-          <div class="item__content">With black truffle and parsnip puree</div>
-          <div class="item__price">£35</div>
-        </div>
-        <div class="item">
-          <div class="item__title">Fillet of turbot</div>
-          <div class="item__content">With citrus dressing</div>
-          <div class="item__price">£44</div>
-        </div>
-      </section>
-      <section class="desserts">
-        <h3 class="category__title">Desserts</h3>
-        <div class="item">
-          <div class="item__title">Treacle tart</div>
-          <div class="item__content">With Cornish clotted cream</div>
-          <div class="item__price">£18</div>
-        </div>
-        <div class="item">
-          <div class="item__title">Lemon posset</div>
-          <div class="item__content">With shortbread biscuit</div>
-          <div class="item__price">£22</div>
-        </div>
-        <div class="item">
-          <div class="item__title">Chocolate mousse</div>
-          <div class="item__content">With a hint of chili and a hazelnut tuile</div>
-          <div class="item__price">£23</div>
-        </div>
-        <a class="order-button" href="#">Order</a>
       </section>
     </section>
-  </section>
-  <footer>
-    <h2>ohmyfood</h2>
-    <ul>
-      <li>
-        <i class="kitchen-icon fa-solid fa-utensils"></i>
-        <p>Suggest a restaurant</p>
-      </li>
-      <li>
-        <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
-        <p>Become a partner</p>
-      </li>
-      <li>
-        <p>Legal notice</p>
-      </li>
-      <li>
-        <p>Contact</p>
-      </li>
-    </ul>
-  </footer>
-</body>
-
-</html>
+  
+    <footer>
+      <h2>ohmyfood</h2>
+      <ul>
+        <li class="footer-list">
+          <i class="kitchen-icon fa-solid fa-utensils"></i>
+          <p>Suggest a restaurant</p>
+        </li>
+        <li class="footer-list">
+          <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
+          <p>Become a partner</p>
+        </li>
+        <li class="footer-list">
+          <p>Legal notice</p>
+        </li>
+        <li class="footer-list">
+          <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
+        </li>
+      </ul>
+    </footer>
+  </body>
+  
+  </html>
