formatted the home page

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
       <li>
         <div class="icon-circle">1</div>
         <i class=" fa-solid fa-mobile-screen icon"></i>
-        <p>Choose a restaurant</p>
+        <p class="icon-text">Choose a restaurant</p>
       </li>
       <li>
         <div class="icon-circle">2</div>
         <i class=" fa-solid fa-list icon"></i>
-        <p>Build your meal</p>
+        <p class="icon-text">Build your meal</p>
       </li>
       <li>
         <div class="icon-circle">3</div>
         <i class=" fa-solid fa-store icon-color"></i>
-        <p>Enjoy your meal at the restaurant</p>
+        <p class="icon-text">Enjoy your meal at the restaurant</p>
       </li>
     </ol>
   </div>
