made final edits

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <div class="spinner-container">
     <div class="spinner"></div>
   </div>
-  
+
   <header class="logo">
-      <img class=logo__image src="./public/images/logo/ohmyfood.png" alt="Logo">
+    <img class=logo__image src="./public/images/logo/ohmyfood.png" alt="Logo">
   </header>
   <div class="location">
     <i class="fa-solid fa-location-dot dot"></i>
@@ -41,7 +41,6 @@
 
   <div class="how-it-works">
     <h2 class="how-it-works__title">How it works</h2>
-  </div>
     <ol>
       <li>
         <div class="icon-circle">1</div>
@@ -120,14 +119,14 @@
     <ul>
       <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-utensils"></i>
-        <p>Suggest a restaurant</p>
+        <a href="#">Suggest a restaurant</a>
       </li>
       <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
-        <p>Become a partner</p>
+        <a href="#">Become a partner</a>
       </li>
       <li class="footer-list">
-        <p>Legal notice</p>
+        <a href="#">Legal notice</a>
       </li>
       <li class="footer-list">
         <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
