--- a/public/pages/elderflower.html
+++ b/public/pages/elderflower.html
@@ -127,7 +127,7 @@
           <div class="item">
             <div class="item__text">
               <h3 class="item__title">Deconstructed rum baba</h3>
-              <p class="item__content">With lemon coulis/p>
+              <p class="item__content">With lemon coulis</p>
             </div>
             <span class="item__price">£22</span>
             <div class="selection">
@@ -157,14 +157,14 @@
     <ul>
       <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-utensils"></i>
-        <p>Suggest a restaurant</p>
+        <a href="#">Suggest a restaurant</a>
       </li>
       <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
-        <p>Become a partner</p>
+        <a href="#">Become a partner</a>
       </li>
       <li class="footer-list">
-        <p>Legal notice</p>
+        <a href="#">Legal notice</a>
       </li>
       <li class="footer-list">
         <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
