--- a/public/pages/kitchen-west.html
+++ b/public/pages/kitchen-west.html
@@ -141,20 +141,19 @@
       </div>
     </section>
   </section>
-
   <footer>
     <h2>ohmyfood</h2>
     <ul>
       <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-utensils"></i>
-        <p>Suggest a restaurant</p>
+        <a href="#">Suggest a restaurant</a>
       </li>
       <li class="footer-list">
         <i class="kitchen-icon fa-solid fa-handshake-angle"></i>
-        <p>Become a partner</p>
+        <a href="#">Become a partner</a>
       </li>
       <li class="footer-list">
-        <p>Legal notice</p>
+        <a href="#">Legal notice</a>
       </li>
       <li class="footer-list">
         <a href="mailto:elisabethvillette3@gmail.com">Contact</a>
